--- a/storefront/package.json
+++ b/storefront/package.json
@@ -29,6 +29,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
+    "type-fest": "^0.13.1",
     "yup": "^0.32.11"
   },
   "devDependencies": {
