--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "medusa-fulfillment-manual": "^1.1.31",
     "medusa-interfaces": "^1.3.1",
     "medusa-payment-manual": "^1.0.16",
+    "medusa-payment-paypal": "^1.2.4",
     "medusa-payment-stripe": "^1.1.41",
     "medusa-plugin-sendgrid": "^1.3.3",
     "typeorm": "^0.2.36"
