--- a/storefront/package.json
+++ b/storefront/package.json
@@ -8,6 +8,7 @@
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "@medusajs/medusa-js": "^1.1.1",
+    "@paypal/react-paypal-js": "^7.8.1",
     "@stripe/react-stripe-js": "^1.7.0",
     "@stripe/stripe-js": "^1.21.2",
     "@tailwindcss/forms": "^0.4.0",
